# digital-alfred

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml
docs/: how_to_operate.md  progress.md
prompts/: MVP.md
src/digital_alfred/: main.py
src/digital_alfred/application/: render_controller.py
src/digital_alfred/core/ports/: avatar_provider.py  voice_provider.py
src/digital_alfred/infrastructure/: config_loader.py  eleven_labs_adapter.py  hey_gen_adapter.py  logging.py
tests/: test_cli.py  test_config_loader.py  test_logging.py  test_render_controller.py
