[tool.poetry]
name = "digital-alfred"
version = "0.1.0"
description = "Productization Layer for Alfred Invierte content pipeline"
authors = ["Principal Software Architect"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
icontract = "<3.0"
pyyaml = "<7.0"
python-dotenv = "<1.1"
tenacity = "<9.0"
requests = "<2.32"
httpx = "<0.28"
pydantic = "<2.10"
typer = "<0.13"
elevenlabs = "<2.36"


[tool.poetry.group.dev.dependencies]
pytest-mock = "<3.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
